deployment/conf/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: myapp-service
   namespace: myapp-production

spec:
   selector:
      app: myapp-deployment
   ports:
      - name: http
        port: 80
        protocol: TCP
        targetPort: 80
   sessionAffinity: ClientIP
   sessionAffinityConfig:
      clientIP:
         timeoutSeconds: 3600
   type: ClusterIP
