deployment/conf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: traefik-network-redirect@kubernetescrd,traefik-network-security@kubernetescrd
  name: myapp-ingress
  namespace: myapp-production

spec:
  rules:
    - host: "domain.com"
      http:
        paths:
          - backend:
              service:
                name: myapp-service
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: "staging.domain.com"
      http:
        paths:
          - backend:
              service:
                name: myapp-service
                port:
                  number: 80
            path: /
            pathType: Prefix

  tls:
    - hosts:
        - "domain.com"
        - "staging.domain.com"
      secretName: domain.com-tls
